--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,10 +7,7 @@
 # Contact KDAB at <info@kdab.com> for commercial licensing options.
 #
 
-if(${QT_VERSION_MAJOR} EQUAL 5 AND TARGET Qt5::Core)
-    add_subdirectory(codecbrowser)
-endif()
-if((${QT_VERSION_MAJOR} EQUAL 5) OR (${QT_VERSION_MAJOR} EQUAL 6 AND TARGET Qt6::StateMachine))
+if(TARGET Qt6::StateMachine)
     add_subdirectory(statemachineviewer)
 else()
     message(STATUS "WARNING: Skipping the statemachineviewer plugin since Qt6StateMachine was not found")
@@ -35,7 +32,8 @@ if(TARGET Qt::Gui)
     add_subdirectory(guisupport)
     add_subdirectory(textdocumentinspector)
 endif()
-if((${QT_VERSION_MAJOR} EQUAL 5 AND TARGET Qt5::Gui) OR (${QT_VERSION_MAJOR} EQUAL 6 AND TARGET Qt6::OpenGL))
+
+if(TARGET Qt::OpenGL)
     add_subdirectory(openglsupport)
 endif()
 
