--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,13 @@
+root = true
+
+[*]
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
+charset = utf-8
+
 [*.sh]
 indent_style = space
 indent_size = 2
