--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -67,6 +67,7 @@ jobs:
               run: >
                   cmake -S . -G Ninja --preset ${{ matrix.preset.name }}
                   -DGAMMARAY_WITH_KDSME=ON
+                  -DWARNINGS_ARE_ERRORS=OFF
                   -DGAMMARAY_BUILD_DOCS=${{ runner.os == 'Linux' }}
 
             - name: Build Project
