ci: disable kdsme with mingw
Trying go get CI green first, then we can tackle adding more features

--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -68,6 +68,7 @@ jobs:
                   cmake -S . -G Ninja --preset ${{ matrix.preset.name }}
                   -DGAMMARAY_WITH_KDSME=ON
                   -DWARNINGS_ARE_ERRORS=OFF
+                  -DGAMMARAY_WITH_KDSME=OFF
                   -DGAMMARAY_BUILD_DOCS=${{ runner.os == 'Linux' }}
 
             - name: Build Project
