--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -4,7 +4,6 @@
 
 # Workflow for MinGW
 #
-# We don't officially support MinGW at this point, but first step is keeping the build green.
 # Do not merge with build-qt6.yml, the matrix is sufficiently different and half the steps as well.
 
 name: CI Qt6 MinGW
@@ -46,7 +45,7 @@ jobs:
                     - arch: win64_llvm_mingw
                       tools_arg: tools_llvm_mingw1706 tools_ninja
                       mingw_path_segment: llvm-mingw1706_64
-                      test_exclude_regex: "^(quicktexturetest|probeabidetectortest|launchertest|clientconnectiontest)$"
+                      test_exclude_regex: "^(quicktexturetest|launchertest|clientconnectiontest)$"
 
                     - arch: win64_mingw
                       tools_arg: tools_mingw1310 tools_ninja
