ci: Bump documentation workflow to Qt 6
This should fix its failures, as Qt 5 has been removed.
Added manual trigger so we can test as well

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -32,10 +33,10 @@ jobs:
           sudo apt install -y doxygen
 
       - name: Install Qt
-        uses: jurplel/install-qt-action@v3
+        uses: jurplel/install-qt-action@v4
         with:
           aqtversion: null # use whatever the default is
-          version: 5.15.2
+          version: "6.5.*"
           cache: true
 
       - name: Checkout sources
