--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -33,13 +33,13 @@ jobs:
                 qt_version:
                     - "6.9.0"
                 preset:
-                    - name: ci-dev-client-only-qt6
+                    - name: ci-dev-client-only
                       runs_tests: true
 
-                    - name: ci-dev-client-and-ui-qt6
+                    - name: ci-dev-client-and-ui
                       runs_tests: true
 
-                    - name: ci-dev-probe-only-qt6
+                    - name: ci-dev-probe-only
                       runs_tests: false
                 toolchain:
                     - arch: win64_llvm_mingw
