Fix build with Qt 6.10 due to new way of finding private headers
bump latest Qt to 6.10 in CI

--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -31,7 +31,8 @@ jobs:
             fail-fast: false
             matrix:
                 qt_version:
-                    - "6.9.0"
+                    - "6.9.0" # Minimum supported/tested on MinGW
+                    - "6.10.0" # Bump to latest freely
                 preset:
                     - name: ci-dev-client-only
                       runs_tests: true
