--- a/plugins/statemachineviewer/CMakeLists.txt
+++ b/plugins/statemachineviewer/CMakeLists.txt
@@ -47,9 +47,15 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     target_link_libraries(gammaray_statemachineviewer_plugin gammaray_core)
 
     if(TARGET Qt::Scxml)
+        if(Qt6Gui_VERSION VERSION_GREATER_EQUAL "6.10.0")
+            find_package(Qt6ScxmlPrivate REQUIRED NO_MODULE)
+        endif()
         target_link_libraries(gammaray_statemachineviewer_plugin Qt::Scxml Qt::ScxmlPrivate)
     endif()
-    if(${QT_VERSION_MAJOR} EQUAL 6 AND TARGET Qt6::StateMachine)
+    if(TARGET Qt6::StateMachine)
+        if(Qt6Gui_VERSION VERSION_GREATER_EQUAL "6.10.0")
+            find_package(Qt6StateMachinePrivate REQUIRED NO_MODULE)
+        endif()
         target_link_libraries(gammaray_statemachineviewer_plugin Qt6::StateMachine Qt6::StateMachinePrivate)
     endif()
 endif()
