fix: compile under qt6.10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -464,6 +464,8 @@ find_package(
         WebEngineWidgets
         Widgets
         WaylandCompositor
+        ScxmlPrivate
+        StateMachinePrivate
 )
 
 if(ANDROID)
