Add support capturing QtQuick windows backed by Qt Rhi
This is an interesting QtQuick backend to support because of some of the
inherent design limitations we have to work around. But we are now able
to capture and draw target decorations for these windows backed by Rhi
now.

The first problem we have to tackle is actually capturing the window
contents, but fortunately Qt already has public API to do this. They
don't provide a mapping from their bespoke Rhi texture format to QImage
unfortunately, but I added a user-visible error message so it's easier
for people to submit bugreports for any missing cases.

I tried to optimize the readback as best I could, and the performance is
about on-par to the OpenGL screen grabber. (I didn't actually benchmark,
but it looks good enough to my own eyes.)

Another tricky problem to tackle is drawing the remote target
decorations, because we previously assumed we always had a QPainter to
draw in. (For context, the client's viewport is drawn in QPainter and in
the OpenGL there's QOpenGLPaintDevice available.) Not only that, but we
can't exactly tell *when* to let Qt readback the swapchain image. The
pre-existing screengrabbers grabbed the backbuffer before we drew target
decorations so we could draw them client-side.

For the drawing part I don't think there's anything we could do save for
rewriting it in QtRHI, so we upload it into a texture and draw it onto
the backbuffer. Yes it is "slow" but it's more than good enough than it
not working at all.

For the target decoration part that's not going to be easily possible,
so I decided to not do it! Instead, we let ourselves capture the full
window contents *including* the decorations we drew. We then skip
drawing decorations client-side, and it's practically the same
experience save for anything drawn outside the window. That limitation
is going to be planned to be addressed in a future patch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -506,6 +506,8 @@ if(Qt6Gui_VERSION VERSION_GREATER_EQUAL "6.10.0")
     find_package(Qt6WidgetsPrivate REQUIRED NO_MODULE)
     find_package(Qt6QmlPrivate NO_MODULE)
     find_package(Qt6QuickPrivate NO_MODULE)
+    find_package(Qt6QuickWidgetsPrivate NO_MODULE)
+    find_package(Qt6GuiPrivate NO_MODULE)
 endif()
 
 # these need to included after the last Qt-related find_package() call
